# mfcc-benchmark

./: .gitignore  Pipfile  README.md  pyproject.toml
mfcc-benchmark/: __main__.py  util.py
mfcc_bench/: __main__.py  mel_spec.py  mfcc.py  util.py
